added EggWars base