@@ -1,12 +1,9 @@
 package emanondev.minigames.games.eggwars;
 
 import com.sk89q.worldedit.IncompleteRegionException;
-import com.sk89q.worldedit.WorldEdit;
-import com.sk89q.worldedit.bukkit.BukkitAdapter;
-import com.sk89q.worldedit.regions.Region;
-import emanondev.core.CorePlugin;
-import emanondev.core.YMLSection;
+import emanondev.core.UtilsString;
 import emanondev.core.message.DMessage;
+import emanondev.core.message.SimpleMessage;
 import emanondev.core.util.WorldEditUtility;
 import emanondev.minigames.ArenaManager;
 import emanondev.minigames.Minigames;
@@ -16,10 +13,7 @@ import emanondev.minigames.locations.LocationOffset3D;
 import org.bukkit.Bukkit;
 import org.bukkit.DyeColor;
 import org.bukkit.Particle;
-import org.bukkit.World;
-import org.bukkit.command.CommandSender;
 import org.bukkit.entity.Player;
-import org.bukkit.util.BoundingBox;
 import org.bukkit.util.Vector;
 import org.jetbrains.annotations.NotNull;
 
@@ -28,17 +22,10 @@ import java.util.*;
 
 public class EggWarsArenaBuilder extends SchematicArenaBuilder {
 
+    private static final SimpleMessage ERR_UNKNOWN_ACTION = new SimpleMessage(Minigames.get(), "arenabuilder.eggwars.error.unknown_action");
+    private static final SimpleMessage ERR_OUTSIDE_ARENA = new SimpleMessage(Minigames.get(), "arenabuilder.eggwars.error.outside_arena");
     private final HashMap<DyeColor, LocationOffset3D> spawnLocations = new HashMap<>();
     private LocationOffset3D spectatorsOffset;
-
-    public EggWarsArenaBuilder(@NotNull UUID user, @NotNull String id, @NotNull String label, @NotNull CorePlugin plugin) {
-        super(user, id, label, plugin);
-    }
-
-    @Override
-    protected void onPhaseStart() {
-
-    }
 
     private static final int PHASE_SELECT_AREA = 1;
     private static final int PHASE_SET_TEAM_SPAWNS = 2;
@@ -46,135 +33,165 @@ public class EggWarsArenaBuilder extends SchematicArenaBuilder {
     private static final int PHASE_SET_SPECTATOR_SPAWN = 4;
     private static final int PHASE_SET_SPECTATOR_SPAWN_OR_NEXT = 5;
 
+    public EggWarsArenaBuilder(@NotNull UUID user, @NotNull String id, @NotNull String label) {
+        super(user, id, label, Minigames.get());
+    }
+
+    @Override
+    protected void onPhaseStart() {
+        timerTick = 0;
+    }
 
     @Override
     public @NotNull DMessage getCurrentBossBarMessage() {
-        return new DMessage(Minigames.get(), getBuilder()).appendLang("eggwars.arenabuilder.bossbar.phase" + getPhase());
+        return new DMessage(Minigames.get(), getBuilder()).appendLang("arenabuilder.eggwars.bossbar.phase" + getPhase(), "%alias%", getLabel());
     }
 
     @Override
     public @NotNull DMessage getRepeatedMessage() {
         return switch (getPhase()) {
             case PHASE_SET_TEAM_SPAWNS, PHASE_SET_TEAM_SPAWNS_OR_NEXT -> {
-                YMLSection sect = Minigames.get().getLanguageConfig(getBuilder()).loadSection("eggwars.arenabuilder.repeatmessage");
-                StringBuilder teamSet = new StringBuilder();
+                DMessage teamSet = new DMessage(Minigames.get(), getBuilder());
                 for (DyeColor color : DyeColor.values())
                     if (!spawnLocations.containsKey(color))
-                        teamSet.append(sect.loadMessage("setteamcolor", "", (CommandSender) null, "%color%", color.name(), "%hexa%", UtilColor.getColorHexa(color)));
-                StringBuilder teamDelete = new StringBuilder();
+                        teamSet.appendLang("arenabuilder.eggwars.repeatmessage.setteamcolor", "%color%", color.name(), "%hexa%", UtilColor.getColorHexa(color), "%alias%", getLabel());
+                DMessage teamDelete = new DMessage(Minigames.get(), getBuilder());
                 for (DyeColor color : spawnLocations.keySet())
-                    teamDelete.append(sect.loadMessage("deleteteamcolor", "", (CommandSender) null, "%color%", color.name()));
-                yield new DMessage(Minigames.get(), getBuilder()).append(sect.loadMessage("phase" + getPhase(), "", (CommandSender) null
+                    teamDelete.appendLang("arenabuilder.eggwars.repeatmessage.deleteteamcolor", "%color%", color.name(), "%hexa%", UtilColor.getColorHexa(color), "%alias%", getLabel());
+                yield new DMessage(Minigames.get(), getBuilder()).appendLang("arenabuilder.eggwars.repeatmessage.phase" + getPhase()
                         , "%setteamsspawn%", teamSet.toString()
-                        , "%deleteteamsspawn%", teamDelete.toString()));
+                        , "%deleteteamsspawn%", teamDelete.toString(), "%alias%", getLabel());
             }
-            default -> new DMessage(Minigames.get(), getBuilder()).append(
-                    Minigames.get().getLanguageConfig(getBuilder()).getString("eggwars.arenabuilder.repeatmessage.phase" + getPhase(), ""));
+            default -> new DMessage(Minigames.get(), getBuilder()).appendLang("arenabuilder.eggwars.repeatmessage.phase" + getPhase(), "%alias%", getLabel());
         };
     }
 
     @Override
     public void handleCommand(@NotNull Player player, String label, @NotNull String[] args) {
         if (args.length == 0) {
-            sendDMessage(player, "eggwars.arenabuilder.error.unknown_action");
+            ERR_UNKNOWN_ACTION.send(player, "%alias%", label);
             return;
         }
-        switch (getPhase()) {
-            case PHASE_SELECT_AREA -> {
-                if (!args[0].equalsIgnoreCase("selectarea")) {
-                    sendDMessage(player, "eggwars.arenabuilder.error.unknown_action");
-                    return;
-                }
-                try {
-                    setArea(player);
-                    sendDMessage(player, "eggwars.arenabuilder.success.select_area",
-                            "%world%", getWorld().getName(),
-                            "%x1%", String.valueOf((int) getArea().getMinX()),
-                            "%x2%", String.valueOf((int) getArea().getMaxX()),
-                            "%y1%", String.valueOf((int) getArea().getMinY()),
-                            "%y2%", String.valueOf((int) getArea().getMaxY()),
-                            "%z1%", String.valueOf((int) getArea().getMinZ()),
-                            "%z2%", String.valueOf((int) getArea().getMaxZ()));
-
-                    setPhaseRaw(PHASE_SET_TEAM_SPAWNS);
-                } catch (IncompleteRegionException e) {
-                    sendDMessage(player, "eggwars.arenabuilder.error.unselected_area");
-                }
-            }
-            case PHASE_SET_TEAM_SPAWNS, PHASE_SET_TEAM_SPAWNS_OR_NEXT -> {
-                if (spawnLocations.size() >= 2 && args[0].equalsIgnoreCase("next")) {
-                    sendDMessage(player, "eggwars.arenabuilder.success.next");
-                    setPhaseRaw(PHASE_SET_SPECTATOR_SPAWN);
-                    return;
-                }
-                if (!args[0].equalsIgnoreCase("setteamspawn")) {
-                    sendDMessage(player, "eggwars.arenabuilder.error.unknown_action");
-                    return;
-                }
-                try {
-                    DyeColor color = DyeColor.valueOf(args[1].toUpperCase());
-                    if (!this.isInside(player.getLocation())) {
-                        sendDMessage(player, "eggwars.arenabuilder.error.outside_area");
+        try {
+            switch (getPhase()) {
+                case PHASE_SELECT_AREA -> {
+                    if (!args[0].equalsIgnoreCase("selectarea")) {
+                        ERR_UNKNOWN_ACTION.send(player, "%alias%", label);
                         return;
                     }
-                    LocationOffset3D loc = LocationOffset3D.fromLocation(player.getLocation().subtract(getArea().getMin()));
-                    boolean override = spawnLocations.containsKey(color);
-                    spawnLocations.put(color, loc);
-                    sendDMessage(player, override ? "eggwars.arenabuilder.success.override_team_spawn"
-                            : "eggwars.arenabuilder.success.set_team_spawn", "%color%", color.name());
-                    if (PHASE_SET_TEAM_SPAWNS == getPhase() && spawnLocations.size() >= 2)
-                        setPhaseRaw(PHASE_SET_TEAM_SPAWNS_OR_NEXT);
+                    try {
+                        setArea(player);
+                        sendDMessage(player, "arenabuilder.eggwars.success.select_area",
+                                "%world%", getWorld().getName(),
+                                "%x1%", String.valueOf((int) getArea().getMinX()),
+                                "%x2%", String.valueOf((int) getArea().getMaxX()),
+                                "%y1%", String.valueOf((int) getArea().getMinY()),
+                                "%y2%", String.valueOf((int) getArea().getMaxY()),
+                                "%z1%", String.valueOf((int) getArea().getMinZ()),
+                                "%z2%", String.valueOf((int) getArea().getMaxZ()), "%alias%", label);
 
-                } catch (Exception e) {
-                    sendDMessage(player, "eggwars.arenabuilder.error.invalid_color");
-                }
-            }
-            case PHASE_SET_SPECTATOR_SPAWN, PHASE_SET_SPECTATOR_SPAWN_OR_NEXT -> {
-                if (spectatorsOffset != null && args[0].equalsIgnoreCase("next")) {
-                    sendDMessage(player, "eggwars.arenabuilder.success.completed");
-                    ArenaManager.get().onArenaBuilderCompletedArena(this);
-                    return;
-                }
-                if (!args[0].equalsIgnoreCase("setspectatorspawn")) {
-                    sendDMessage(player, "eggwars.arenabuilder.error.unknown_action");
-                    return;
-                }
-                try {
-                    if (!this.isInside(player.getLocation())) {
-                        sendDMessage(player, "eggwars.arenabuilder.error.outside_area");
-                        return;
+                        setPhaseRaw(PHASE_SET_TEAM_SPAWNS);
+                    } catch (IncompleteRegionException e) {
+                        sendDMessage(player, "arenabuilder.eggwars.error.unselected_area", "%alias%", label);
                     }
-                    boolean override = spectatorsOffset != null;
-                    spectatorsOffset = LocationOffset3D.fromLocation(player.getLocation().subtract(getArea().getMin()));
-                    sendDMessage(player, override ? "eggwars.arenabuilder.success.override_spectators_spawn"
-                            : "eggwars.arenabuilder.success.set_spectators_spawn");
-                    if (getPhase() == PHASE_SET_SPECTATOR_SPAWN)
-                        setPhaseRaw(PHASE_SET_SPECTATOR_SPAWN_OR_NEXT);
-                } catch (Exception e) {
-                    e.printStackTrace();
                 }
+                case PHASE_SET_TEAM_SPAWNS, PHASE_SET_TEAM_SPAWNS_OR_NEXT -> {
+                    switch (args[0].toLowerCase(Locale.ENGLISH)) {
+                        case "next" -> {
+                            if (spawnLocations.size() >= 2) {
+                                //MessageUtil.sendMessage(player, "arenabuilder.eggwars.success.next");
+                                setPhaseRaw(EggWarsArenaBuilder.PHASE_SET_SPECTATOR_SPAWN);
+                                return;
+                            } else {
+                                ERR_UNKNOWN_ACTION.send(player, "%alias%", label);
+                            }
+                        }
+                        case "setteamspawn" -> {
+                            if (!this.isInside(player.getLocation())) {
+                                ERR_OUTSIDE_ARENA.send(player, "%alias%", label);
+                                return;
+                            }
+                            //TODO check color value
+                            DyeColor color = DyeColor.valueOf(args[1].toUpperCase());
+                            LocationOffset3D loc = LocationOffset3D.fromLocation(player.getLocation().subtract(getArea().getMin()));
+                            boolean override = spawnLocations.containsKey(color);
+                            spawnLocations.put(color, loc);
+                            sendDMessage(player, override ? "arenabuilder.eggwars.success.override_team_spawn"
+                                    : "arenabuilder.eggwars.success.set_team_spawn", "%color%", color.name(), "%alias%", label);
+                            if (getPhase() == PHASE_SET_TEAM_SPAWNS && spawnLocations.size() >= 2)
+                                setPhaseRaw(PHASE_SET_TEAM_SPAWNS_OR_NEXT);
+                            else
+                                getRepeatedMessage().send();
+                            return;
+                        }
+                        case "deleteteamspawn" -> {
+                            //TODO check color value
+                            DyeColor color = DyeColor.valueOf(args[1].toUpperCase());
+                            spawnLocations.remove(color);
+                            sendDMessage(player, "arenabuilder.eggwars.success.deleted_team_spawn",
+                                    "%color%", color.name(), "%alias%", label);
+                            if (getPhase() == PHASE_SET_TEAM_SPAWNS_OR_NEXT && spawnLocations.size() < 2)
+                                setPhaseRaw(PHASE_SET_TEAM_SPAWNS);
+                            else
+                                getRepeatedMessage().send();
+                            return;
+                        }
+                    }
+                    ERR_UNKNOWN_ACTION.send(player, "%alias%", label);
+                }
+                case PHASE_SET_SPECTATOR_SPAWN, PHASE_SET_SPECTATOR_SPAWN_OR_NEXT -> {
+                    switch (args[0].toLowerCase(Locale.ENGLISH)) {
+                        case "next" -> {
+                            if (spectatorsOffset != null) {
+                                ArenaManager.get().onArenaBuilderCompletedArena(this);
+                                sendDMessage(player, "arenabuilder.eggwars.success.completed",
+                                        UtilsString.merge(ArenaManager.get().get(getId()).getPlaceholders(), "%alias%", label));
+                                return;
+                            }
+                        }
+                        case "setspectatorspawn" -> {
+                            if (!this.isInside(player.getLocation())) {
+                                ERR_OUTSIDE_ARENA.send(player, "%alias%", label);
+                                return;
+                            }
+                            boolean override = spectatorsOffset != null;
+                            spectatorsOffset = LocationOffset3D.fromLocation(player.getLocation().subtract(getArea().getMin()));
+                            sendDMessage(player, override ? "arenabuilder.eggwars.success.override_spectators_spawn"
+                                    : "arenabuilder.eggwars.success.set_spectators_spawn", "%alias%", label);
+                            if (getPhase() == PHASE_SET_SPECTATOR_SPAWN)
+                                setPhaseRaw(PHASE_SET_SPECTATOR_SPAWN_OR_NEXT);
+                            return;
+                        }
+                    }
+                    ERR_UNKNOWN_ACTION.send(player, "%alias%", label);
+                }
+                default -> new IllegalStateException().printStackTrace();
             }
-            default -> new IllegalStateException().printStackTrace();
+        } catch (Exception e) {
+            e.printStackTrace();
         }
-
     }
 
     @Override
     public List<String> handleComplete(@NotNull String[] args) {
-        return switch (getPhase()) {
-            case 1 -> args.length == 1 ? complete(args[0], List.of("selectarea")) : Collections.emptyList();
-            case 2 -> args.length == 1 ? complete(args[0], List.of("setteamspawn")) :
-                    args.length == 2 ? complete(args[1], DyeColor.class, (DyeColor c) -> !spawnLocations.containsKey(c)) : Collections.emptyList();
-            case 3 -> {
-                if (args.length == 1)
-                    yield complete(args[0], List.of("setteamspawn", "next"));
-                if (args.length == 2)
-                    yield complete(args[1], DyeColor.class, (DyeColor c) -> !spawnLocations.containsKey(c));
-                yield Collections.emptyList();
-            }
-            case 4 -> complete(args[0], List.of("setspectatorspawn"));
-            case 5 -> complete(args[0], List.of("setspectatorspawn", "next"));
-            default -> throw new IllegalStateException("Unexpected value: " + getPhase());
+        return switch (args.length) {
+            case 1 -> switch (getPhase()) {
+                case PHASE_SELECT_AREA -> complete(args[0], List.of("selectarea"));
+                case PHASE_SET_TEAM_SPAWNS -> complete(args[0], List.of("setteamspawn", "deleteteamspawn"));
+                case PHASE_SET_TEAM_SPAWNS_OR_NEXT -> complete(args[0], List.of("setteamspawn", "deleteteamspawn", "next"));
+                case PHASE_SET_SPECTATOR_SPAWN -> complete(args[0], List.of("setspectatorspawn"));
+                case PHASE_SET_SPECTATOR_SPAWN_OR_NEXT -> complete(args[0], List.of("setspectatorspawn", "next"));
+                default -> Collections.emptyList();
+            };
+            case 2 -> switch (getPhase()) {
+                case PHASE_SET_TEAM_SPAWNS, PHASE_SET_TEAM_SPAWNS_OR_NEXT -> switch (args[0].toLowerCase(Locale.ENGLISH)) {
+                    case "setteamspawn" -> complete(args[1], DyeColor.class, (DyeColor c) -> !spawnLocations.containsKey(c));
+                    case "deleteteamspawn" -> complete(args[1], DyeColor.class, spawnLocations::containsKey);
+                    default -> Collections.emptyList();
+                };
+                default -> Collections.emptyList();
+            };
+            default -> Collections.emptyList();
         };
     }
 
@@ -183,14 +200,14 @@ public class EggWarsArenaBuilder extends SchematicArenaBuilder {
         Map<String, Object> map = new LinkedHashMap<>();
 
         String schemName = Bukkit.getOfflinePlayer(getUser()).getName() + "_" + getId();
-        File schemFile = new File(Minigames.get().getDataFolder(), "schematics/" + schemName);
+        File schemFile = new File(ArenaManager.get().getSchematicsFolder(), schemName);
         String schemNameFinal = schemName;
 
         //avoid overriding existing schematics
         int counter = 1;
         while (schemFile.exists()) {
             schemNameFinal = schemName + "_" + counter;
-            schemFile = new File(Minigames.get().getDataFolder(), "schematics/" + schemNameFinal);
+            schemFile = new File(ArenaManager.get().getSchematicsFolder(), schemNameFinal);
             counter++;
         }
 
@@ -220,62 +237,30 @@ public class EggWarsArenaBuilder extends SchematicArenaBuilder {
         if (p == null || !p.isOnline())
             return;
         timerTick++;
-        if (timerTick % 3 == 0) { //every 15 game ticks
-            Vector min;
-            Vector max;
 
-            if (getPhase() > PHASE_SELECT_AREA) {
-                min = getArea().getMin();
-                max = getArea().getMax();
-            } else {
-                try {
-                    World world = p.getWorld();
-                    Region sel = WorldEdit.getInstance().getSessionManager().get(BukkitAdapter.adapt(p))
-                            .getSelection(BukkitAdapter.adapt(world));
-                    BoundingBox area = new BoundingBox(sel.getMinimumPoint().getX(), sel.getMinimumPoint().getY(),
-                            sel.getMinimumPoint().getZ(), sel.getMaximumPoint().getX(), sel.getMaximumPoint().getY(),
-                            sel.getMaximumPoint().getZ());
-                    min = area.getMin();
-                    max = area.getMax();
-                } catch (Exception e) {
-                    return;
-                }
-            }
-
-            for (int i = min.getBlockX(); i <= max.getBlockX(); i++) {
-                p.spawnParticle(Particle.COMPOSTER, i, min.getY(), min.getZ(), 1);
-                p.spawnParticle(Particle.COMPOSTER, i, max.getY() + 1, min.getZ(), 1);
-                p.spawnParticle(Particle.COMPOSTER, i, min.getY(), max.getZ() + 1, 1);
-                p.spawnParticle(Particle.COMPOSTER, i, max.getY() + 1, max.getZ() + 1, 1);
-            }
-            for (int i = min.getBlockY(); i <= max.getBlockY(); i++) {
-                p.spawnParticle(Particle.COMPOSTER, min.getX(), i, min.getZ(), 1);
-                p.spawnParticle(Particle.COMPOSTER, max.getX() + 1, i, min.getZ(), 1);
-                p.spawnParticle(Particle.COMPOSTER, min.getX(), i, max.getZ() + 1, 1);
-                p.spawnParticle(Particle.COMPOSTER, max.getX() + 1, i, max.getZ() + 1, 1);
-            }
-            for (int i = min.getBlockZ(); i <= max.getBlockZ(); i++) {
-                p.spawnParticle(Particle.COMPOSTER, min.getX(), min.getY(), i, 1);
-                p.spawnParticle(Particle.COMPOSTER, max.getX() + 1, min.getY(), i, 1);
-                p.spawnParticle(Particle.COMPOSTER, min.getX(), max.getY() + 1, i, 1);
-                p.spawnParticle(Particle.COMPOSTER, max.getX() + 1, max.getY() + 1, i, 1);
-            }
-            for (int i = 0; i < 8; i++) {
-                double xOffset = min.getX() + 0.4 * Math.sin(i * Math.PI / 4);
-                double zOffset = min.getZ() + 0.4 * Math.cos(i * Math.PI / 4);
-                double yOffset = min.getY() + 0.05D;
-                spawnLocations.forEach((k, v) ->
-                        p.spawnParticle(Particle.REDSTONE, v.x + xOffset, v.y + yOffset,
-                                v.z + zOffset, 1, new Particle.DustOptions(k.getColor(), 1F)));
-                if (spectatorsOffset != null)
-                    p.spawnParticle(Particle.WAX_ON, spectatorsOffset.x + xOffset,
-                            spectatorsOffset.y + yOffset, spectatorsOffset.z + zOffset, 1);
-            }
-        }
-        if (timerTick % 60 == 0) { //every 15 seconds
+        if (timerTick % 180 == 0) { //every 45 seconds
             getRepeatedMessage().send();
         }
-    }
 
+        if (timerTick % 2 == 0) { //every 15 game ticks
+            if (getPhase() <= PHASE_SELECT_AREA)
+                this.spawnParticleWorldEditRegionEdges(p, Particle.COMPOSTER);
+            else
+                this.spawnParticleBoxEdges(p, Particle.COMPOSTER, getArea().expand(0, 0, 0, 1, 1, 1));
+            if (getPhase() <= PHASE_SELECT_AREA)
+                return;
+            Vector min = getAreaMin();
+            if (!getArea().equals(getWorldEditSection(p)))
+                spawnParticleWorldEditRegionEdges(p, Particle.WAX_OFF);
+            spawnLocations.forEach((k, v) -> spawnParticleCircle(p, Particle.REDSTONE, min.getX() + v.x, min.getY() + v.y, min.getZ() + v.z,
+                    0.4, timerTick % 4 == 0, new Particle.DustOptions(k.getColor(), 1F)));
+            if (spectatorsOffset != null) {
+                spawnParticleCircle(p, Particle.WAX_ON, min.getX() + spectatorsOffset.x, min.getY() + spectatorsOffset.y, min.getZ() + spectatorsOffset.z,
+                        0.4, timerTick % 4 == 0);
+                if (timerTick % 4 == 0)
+                    spawnParticle(p, Particle.SCULK_SOUL, min.getX() + spectatorsOffset.x, min.getY() + spectatorsOffset.y + 1, min.getZ() + spectatorsOffset.z);
+            }
+        }
+    }
 }
 
